kubernetes/apps/longhorn-ui/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: flux-system
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # prevent the controller from redirecting (308) to HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: longhorn-basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
    # custom max body size for file uploading like backing image uploading
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-ingress-svc
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-ingress
  namespace: flux-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: longhorn-ingress
  template:
    metadata:
      labels:
        app: longhorn-ingress
    spec:
      containers:
      - name: longhorn-ingress
        image: nginx
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: longhorn-ingress-svc
  namespace: flux-system
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: longhorn-ingress
  type: LoadBalancer
